# MonoAlg3D_C

./: .build_type  .clang-format  .envrc  .gitattributes  .gitignore  .gitmodules  .local.vimrc  CMakeLists.txt  Changes.txt  CppProperties.json  Dockerfile  LICENSE  Makefile  README.md  ToDo  ]  build.sh  change-gcc.sh  check.m  clean_project.sh  default.gpr  ecg.txt  ecg_cpu.txt  fibrotic_positions.txt  guide-monoalg3d-fedora.md  guide-monoalg3d-ubuntu.md  guide-monoalg3d-ubuntu.txt  guide-monoalg3d-windows.md  mono  recompile_project.sh  run_co_at_simulations.sh  run_co_at_with_pruning_simulations.sh  run_co_length_simulations.sh  run_co_length_with_pruning_simulations.sh  run_dla_simulations.sh  run_oxford.sh  run_profilers.sh  run_sensibility_analisys_cco.sh  run_tests.sh
scripts/calc_propagation_velocity_full_grid/: CMakeLists.txt  ToDo  calc_activation_time_full_grid.py  calculate_propagation_velocity.sh  main.cpp
scripts/pmj-generator/: .gitignore  CMakeLists.txt
src/alg/: CMakeLists.txt  build.sh
src/config/: CMakeLists.txt  assembly_matrix_config.c  assembly_matrix_config.h  build.sh  config_common.c  config_common.h  config_parser.c  config_parser.h  domain_config.c  domain_config.h  ecg_config.h  extra_data_config.c  extra_data_config.h  linear_system_solver_config.c  linear_system_solver_config.h  modify_current_domain_config.c  modify_current_domain_config.h  postprocessor_config.c  postprocessor_config.h  purkinje_config.c  purkinje_config.h  restore_state_config.c  restore_state_config.h  save_mesh_config.c  save_mesh_config.h  save_state_config.c  save_state_config.h  stim_config.c  stim_config.h  stim_config_hash.c  stim_config_hash.h  update_monodomain_config.c  update_monodomain_config.h
src/domains_library/: CMakeLists.txt  build.sh  domain.c  domain_helpers.c  domain_helpers.h  grid_domain.c  grid_domain.h  mesh_info_data.h
src/extra_data_library/: CMakeLists.txt  build.sh  extra_data.c  extra_data.h  extra_mixed_models.c  helper_functions.c  helper_functions.h
src/fork_pipe/: CMakeLists.txt  fork_pipe.h  fork_pipe_linux.c  fork_pipe_linux.h  fork_pipe_windows.c  fork_pipe_windows.h
src/hash/: CMakeLists.txt  hash_common.c  hash_common.h  point_hash.c  point_hash.h  point_voidp_hash.c  point_voidp_hash.h  stim_config_hash.c  stim_config_hash.h  string_hash.c  string_hash.h
src/linear_system_solver_library/: CMakeLists.txt  build.sh  gpu_solvers_cublas_10.c  gpu_solvers_cublas_11.c  gpu_solvers_cublas_12.c  gpu_solvers_sycl.cpp  linear_system_solver.c  matrix_assembly.c
src/main/: CMakeLists.txt  config_common.h  config_parser.c  config_parser.h  constants.h  domain_config.c  domain_config.h  extra_data_config.c  extra_data_config.h  linear_system_solver.c  monodomain_solver.c  monodomain_solver.h  ode_solver.c  ode_solver.h  output_utils.c  output_utils.h  stim_config.c  stim_config.h  stim_config_hash.c  stim_config_hash.h
src/matrix_assembly_library/: CMakeLists.txt  assembly_common.c  build.sh  ddm_matrix_assembly.c  matrix_assembly.c  purkinje_coupled_matrix_assembly.c  purkinje_coupling_matrix_assembly.c  purkinje_matrix_assembly.c  stimuli.c
src/models/: CMakeLists.txt  bondarenko_2004_CPU.c  model_common.h  model_cpu_template.c  model_gpu_template.cu  model_gpu_utils.cuh  model_gpu_utils.h  ten_tusscher_2006_CPU.c  ten_tusscher_2006_GPU.cu  ten_tusscher_2006_RS_CPU.c  ten_tusscher_2006_RS_GPU.cu  ten_tusscher_3_RS.h  ten_tusscher_3_RS_CPU.c  ten_tusscher_3_RS_GPU.cu
src/models_library/: CMakeLists.txt  Maleckar2008.c  Maleckar2008.cu  Maleckar2008.h  Ohara_Rudy_2011.c  Ohara_Rudy_2011.cu  Ohara_Rudy_2011.h  ToRORd_fkatp_endo.c  ToRORd_fkatp_endo.cu  ToRORd_fkatp_endo.h  ToRORd_fkatp_endo_2019.c  ToRORd_fkatp_endo_2019.cu  ToRORd_fkatp_endo_2019.h  ToROrd_common.inc.c  bondarenko_2004.c  bondarenko_2004.h  bondarenko_2004_CPU.c  bondarenko_2004_GPU.cu  build.sh  courtemanche_ramirez_nattel_1998.c  courtemanche_ramirez_nattel_1998.cu  courtemanche_ramirez_nattel_1998.h  courtemanche_ramirez_nattel_1998_common.inc.c  default_solvers.c  default_solvers.cu  default_solvers.h  difrancesco.c  difrancesco.cu  difrancesco.h  faber_rudy_2000_version04.c  faber_rudy_2000_version04.cu  faber_rudy_2000_version04.h  fhn_mod.c  fhn_mod.cu  fhn_mod.h  li_rudy_2011.c  li_rudy_2011.cu  li_rudy_2011.h  luo_rudy_1991.c  luo_rudy_1991.cu  (+234 more)
src/modify_domain/: CMakeLists.txt  build.sh  modify_domain.c
src/monodomain/: CMakeLists.txt  build.sh  constants.h  linear_system_solver.c  linear_system_solver.h  monodomain_solver.c  monodomain_solver.h  ode_solver.c  ode_solver.h  output_utils.c  output_utils.h
src/purkinje_library/: CMakeLists.txt  build.sh  purkinje.c  purkinje_helpers.c  purkinje_helpers.h
src/restore_state_library/: CMakeLists.txt  build.sh  restore_state.c
src/save_mesh_library/: CMakeLists.txt  build.sh  data_utils.c  data_utils.h  save_mesh.c  save_mesh_berg.c  save_mesh_helper.c  save_mesh_helper.h  save_mesh_purkinje.c  vtk_polydata_grid.c  vtk_polydata_grid.h  vtk_unstructured_grid.c  vtk_unstructured_grid.h  vtk_unstructured_grid_bkp.c
src/save_state_library/: CMakeLists.txt  build.sh  save_state.c
src/stimuli_library/: CMakeLists.txt  build.sh  stimuli.c  stimuli.h
src/tests/: B1.txt  CMakeLists.txt  build.sh  calc_mse.m  common.c  generate_SPD_matrix.m  profile_custom_mesh_load.c  profile_linear_system_solvers.c  profile_linear_system_solvers_gpu.c  profile_mesh_alg_load.c  profile_mesh_bin_load.c  profile_mesh_en_load.c  profile_mesh_load.c  profile_mesh_txt_load.c  profile_mesh_vtu_load.c  profile_simulation.c  profile_solvers_common.c  profile_vtu_load.c  solver_profiler.c  test_benchmark.c  test_benchmark.h  test_libs.c  test_mesh.c  test_simulations.c  test_solvers.c  teste_cg.c  teste_cg.h  tests.c  valgring_toy_test.c
src/update_monodomain_library/: CMakeLists.txt  build.sh  update_monodomain.c
src/utils/: CMakeLists.txt  batch_utils.c  batch_utils.h  build.sh  config_parser.c  config_parser.h  constants.h  erros_helpers.c  erros_helpers.h  file_utils.c  file_utils.h  heap.c  heap.h  logfile_utils.c  opts.c  (+13 more)
(+2865 files in other folders)
